Alter-Accidental (Sibilius Style) added.
Ctrl+H changed to Ctrl+Space
Sibilius style Fingering added.
Consecutive Fingers are separated with underline instead of ;
Space between chord last note and closing brocket added back.
Chord/Arpeggio/Tublet range is no more presented with [], instead *_end is added.
';' is replacable with ' '
Fingers restructured.


UPDATE INDEX files and HELP
UPDATE NEWS, Correct Version and Download files.