@@ -23,12 +23,13 @@ CCustomization::~CCustomization()
 
 void CCustomization::DoDataExchange(CDataExchange* pDX)
 {
-	CDialogEx::DoDataExchange(pDX);
-	DDX_Control(pDX, IDC_REPEAT_SIGNATURES, m_AlwaysShowSignatures);
-	DDX_Control(pDX, IDC_SHOW_DETAILED_TEXT, m_ShowDetailedText);
-	DDX_Control(pDX, IDC_PLAY_NAVIGATIONAL_SOUNDS, m_PlayNavigationalSounds);
-	DDX_Control(pDX, IDC_USE_UNICODE_CHARACTERS, m_UseUnicodeCharacters);
-	DDX_Control(pDX, IDC_PAGE_SIZE, m_PageSize);
+  CDialogEx::DoDataExchange(pDX);
+  DDX_Control(pDX, IDC_REPEAT_SIGNATURES, m_AlwaysShowSignatures);
+  DDX_Control(pDX, IDC_SHOW_DETAILED_TEXT, m_ShowDetailedText);
+  DDX_Control(pDX, IDC_PLAY_NAVIGATIONAL_SOUNDS, m_PlayNavigationalSounds);
+  DDX_Control(pDX, IDC_USE_UNICODE_CHARACTERS, m_UseUnicodeCharacters);
+  DDX_Control(pDX, IDC_PAGE_SIZE, m_PageSize);
+  DDX_Control(pDX, IDC_SHOW_PERSIAN_NUMBERS_WITH_LETTERS, m_PersianNumbers);
 }
 
 
@@ -48,6 +49,7 @@ BOOL CCustomization::OnInitDialog()
 	m_ShowDetailedText.SetCheck(m_Values.bShowDetailedText);
 	m_PlayNavigationalSounds.SetCheck(m_Values.bPlayNavigationalSounds);
 	m_UseUnicodeCharacters.SetCheck(m_Values.bUseUnicodeCharacters);
+  m_PersianNumbers.SetCheck(m_Values.bLettersForPersianNumbers);
 	CString Temp;
 	Temp.Format(L"%i", m_Values.iPageSize);
 	m_PageSize.SetWindowText(Temp);
@@ -63,6 +65,7 @@ void CCustomization::OnBnClickedOk()
 	m_Values.bShowDetailedText = m_ShowDetailedText.GetCheck() == BST_CHECKED;
 	m_Values.bPlayNavigationalSounds = m_PlayNavigationalSounds.GetCheck() == BST_CHECKED;
 	m_Values.bUseUnicodeCharacters = m_UseUnicodeCharacters.GetCheck() == BST_CHECKED;
+  m_Values.bLettersForPersianNumbers = m_PersianNumbers.GetCheck() == BST_CHECKED;
 	CString Temp;
 	m_PageSize.GetWindowText(Temp);
 	m_Values.iPageSize = _wtoi(Temp);
