@@ -133,18 +133,30 @@ void CTranslator::SetLanguage(CString Language)
 	m_Words.insert(make_pair(L"change_to", L"تغییر_به"));
 	m_Words.insert(make_pair(L"changes_to", L"تغییر_میکند_به"));
 	m_Words.insert(make_pair(L"clarinet", L"کلارینت"));
-	m_Words.insert(make_pair(L"clef_bass", L"کلید: فا"));
-	m_Words.insert(make_pair(L"clef_tab", L"کلید: تَبلِچِر"));
-	m_Words.insert(make_pair(L"clef_treble", L"کلید: سُل"));
-	m_Words.insert(make_pair(L"clef_french", L"کلید: ویلن_فرانسه"));
-	m_Words.insert(make_pair(L"clef_baritone", L"کلید: باریتن"));
-	m_Words.insert(make_pair(L"clef_subbass", L"کلید: باس_پایین"));
-	m_Words.insert(make_pair(L"clef_alto", L"کلید: آلتو"));
-	m_Words.insert(make_pair(L"clef_tenor", L"کلید: تِنور"));
-	m_Words.insert(make_pair(L"clef_mezzosoprano", L"کلید: متسو_سوپرانو"));
-	m_Words.insert(make_pair(L"clef_soprano", L"کلید: سوپرانو"));
-	m_Words.insert(make_pair(L"clef_percussion", L"کلید: خنثی"));
-	m_Words.insert(make_pair(L"clef_tablature", L"کلید: تَبلِچِر"));
+	m_Words.insert(make_pair(L"clef_bass", L"کلید_فا"));
+	m_Words.insert(make_pair(L"clef_tab", L"کلید_تَبلِچِر"));
+	m_Words.insert(make_pair(L"clef_treble", L"کلید_سُل"));
+	m_Words.insert(make_pair(L"clef_french", L"کلید_ویلن_فرانسه"));
+	m_Words.insert(make_pair(L"clef_baritone", L"کلید_باریتن"));
+	m_Words.insert(make_pair(L"clef_subbass", L"کلید_باس_پایین"));
+	m_Words.insert(make_pair(L"clef_alto", L"کلید_آلتو"));
+	m_Words.insert(make_pair(L"clef_tenor", L"کلید_تِنور"));
+	m_Words.insert(make_pair(L"clef_mezzosoprano", L"کلید_متسو_سوپرانو"));
+	m_Words.insert(make_pair(L"clef_soprano", L"کلید_سوپرانو"));
+	m_Words.insert(make_pair(L"clef_percussion", L"کلید_خنثی"));
+	m_Words.insert(make_pair(L"clef_tablature", L"کلید_تَبلِچِر"));
+  //m_Words.insert(make_pair(L"clef_bass", L"کلید: فا"));
+  //m_Words.insert(make_pair(L"clef_tab", L"کلید: تَبلِچِر"));
+  //m_Words.insert(make_pair(L"clef_treble", L"کلید: سُل"));
+  //m_Words.insert(make_pair(L"clef_french", L"کلید: ویلن_فرانسه"));
+  //m_Words.insert(make_pair(L"clef_baritone", L"کلید: باریتن"));
+  //m_Words.insert(make_pair(L"clef_subbass", L"کلید: باس_پایین"));
+  //m_Words.insert(make_pair(L"clef_alto", L"کلید: آلتو"));
+  //m_Words.insert(make_pair(L"clef_tenor", L"کلید: تِنور"));
+  //m_Words.insert(make_pair(L"clef_mezzosoprano", L"کلید: متسو_سوپرانو"));
+  //m_Words.insert(make_pair(L"clef_soprano", L"کلید: سوپرانو"));
+  //m_Words.insert(make_pair(L"clef_percussion", L"کلید: خنثی"));
+  //m_Words.insert(make_pair(L"clef_tablature", L"کلید: تَبلِچِر"));
 	m_Words.insert(make_pair(L"cresc.", L"کرشندو"));
 	m_Words.insert(make_pair(L"staccato", L"استاکاتو"));
 	m_Words.insert(make_pair(L"dynamic", L"دینامیک"));
