@@ -267,7 +267,7 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,174,78,50,14
 END
 
-IDD_CUSTOMIZATION DIALOGEX 0, 0, 321, 122
+IDD_CUSTOMIZATION DIALOGEX 0, 0, 321, 143
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Customizations"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
@@ -280,10 +280,12 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,42,306,12
     CONTROL         "Use unicode characters for &accidentals (Sharp, Flat, Natural).",IDC_USE_UNICODE_CHARACTERS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,60,306,12
-    LTEXT           "&Page Size:",IDC_PAGE_SIZE_STATIC,6,78,48,12
-    EDITTEXT        IDC_PAGE_SIZE,54,78,90,12,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,204,102,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,258,102,50,14
+    CONTROL         "Show &Persian numbers with letters.",IDC_SHOW_PERSIAN_NUMBERS_WITH_LETTERS,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,78,306,12
+    LTEXT           "&Page Size:",IDC_PAGE_SIZE_STATIC,6,96,48,12
+    EDITTEXT        IDC_PAGE_SIZE,54,96,90,12,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,204,120,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,258,120,50,14
 END
 
 
@@ -293,8 +295,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,5,2,0
- PRODUCTVERSION 2,5,2,0
+ FILEVERSION 2,5,3,0
+ PRODUCTVERSION 2,5,3,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -311,12 +313,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Rama"
             VALUE "FileDescription", "WhiteNote Music Narrator"
-            VALUE "FileVersion", "2.5.2.0"
+            VALUE "FileVersion", "2.5.3.0"
             VALUE "InternalName", "WhiteNote.exe"
             VALUE "LegalCopyright", "This is a free and open source software. Get the latest version from www.white-note.com"
             VALUE "OriginalFilename", "WhiteNote.exe"
             VALUE "ProductName", "WhiteNote"
-            VALUE "ProductVersion", "2.5.2.0"
+            VALUE "ProductVersion", "2.5.3.0"
         END
     END
     BLOCK "VarFileInfo"
@@ -395,7 +397,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 314
         TOPMARGIN, 7
-        BOTTOMMARGIN, 115
+        BOTTOMMARGIN, 136
     END
 END
 #endif    // APSTUDIO_INVOKED
