@@ -6,7 +6,11 @@ Space between chord last note and closing brocket added back.
 Chord/Arpeggio/Tublet range is no more presented with [], instead *_end is added.
 ';' is replacable with ' '
 Fingers restructured.
+Persian letters are shown with letters by default.
+Opening bracket added to Chord, etc. Ending replaced back to ]
+Bug fixed for accidentals with unicode for extra _
+Bug fixed for space between ending bracket and ; in English.
 
-
+Update Help: Persian letters.
 UPDATE INDEX files and HELP
 UPDATE NEWS, Correct Version and Download files.
